--- a/config.yaml
+++ b/config.yaml
@@ -9,5 +9,5 @@ ssh_monitor:
   ssh_key_path: id_ed25519_for_natmap
   ssh_poll_interval: 60
 
-storage_file: mappings.json
+db_path: test.sqlite
 logging_level: DEBUG
