--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.11"
 aiohttp = "^3.8.5"
 ruamel-yaml = "^0.17.32"
 fabric = "^3.2.1"
-aiofiles = "^23.2.1"
+aiosqlite = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
